[project]
name = "pymccool"
version = "0.0.1"
authors = [
  { name="Brendon McCool", email="brendonmccool@gmail.com" },
]
description = "Reusable Python Utilities by McCool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bmccool/pyMcCool"