[metadata]
# This is required for any package to install with a name
name = pymccool

# If you are using the "src" lay out then we need the following
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src